# Pwned-PassChecker

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.web  LICENSE  Makefile  README.md  docker-compose.yml  password_generator.py  pwned_checker.py  pyproject.toml  requirements-dev.txt  requirements.txt  sample_passwords.txt
.github/workflows/: ci.yml
src/pwned_checker/: __init__.py  checker.py  cli.py  config.py  generator.py  logger.py
src/pwned_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_checker.py  test_cli.py  test_generator.py
web/: main.py  requirements-web.txt
web/static/: index.html
