[build-system]
requires      = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "pwned-checker"
version     = "2.0.0"
description = "Verificador de contraseñas vulneradas con HIBP + generador seguro"
readme      = "README.md"
license     = { file = "LICENSE" }
authors     = [{ name = "technssoluciones-dev" }]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "urllib3>=2.0.0",
]
keywords = ["security", "password", "hibp", "breach", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

# ── Dependencias opcionales de desarrollo ────────────────────────────────────
# Instalar con: pip install -e ".[dev]"
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "types-requests>=2.31.0",
]

[project.scripts]
pwned-checker = "pwned_checker.cli:main"

[project.urls]
Homepage   = "https://github.com/technssoluciones-dev/Pwned-PassChecker"
Repository = "https://github.com/technssoluciones-dev/Pwned-PassChecker"
Issues     = "https://github.com/technssoluciones-dev/Pwned-PassChecker/issues"

[tool.setuptools.packages.find]
where = ["src"]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-v --tb=short"
timeout     = 30

# ── ruff (linter/formatter) ───────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select  = ["E", "F", "I", "UP", "B", "SIM"]
ignore  = ["E501"]

# ── mypy (type checker) ───────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.10"
strict                 = false
ignore_missing_imports = true
warn_return_any        = true
warn_unused_configs    = true

# ── coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source   = ["src/pwned_checker"]
omit     = ["*/__init__.py"]

[tool.coverage.report]
show_missing   = true
skip_covered   = false
fail_under     = 80